<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMovieActivity" >
    
    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
	<LinearLayout
	    android:layout_width="0px"
	    android:layout_height="0px"
	    android:focusable="true"
	    android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/movie_title"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/movie_title_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/nameLayout"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/ratingTV"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/movie_rating"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65" >

            <RatingBar
                android:id="@+id/movieRating"
                style="@style/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="3.5" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/reviewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/reviewTV"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/movie_review"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/reviewText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reviewLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/save" />

</RelativeLayout>